--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/image-edge": "^1.3.0-28493895.369b747",
+    "@nuxt/image-edge": "1.3.0-28493895.369b747",
     "@nuxtjs/i18n": "8.0.0-beta.12",
     "@types/node": "^18.19.130",
     "autoprefixer": "^10.4.22",
@@ -24,6 +24,11 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@vue-hero-icons/outline": "^1.7.2",
-    "firebase-tools": "^14.26.0"
+    "firebase-tools": "^15.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "glob@>=10.2.0 <10.5.0": ">=10.5.0"
+    }
   }
 }
